# api_client

./: .gitignore  README.md  client-test.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-test.yml  pytype.yml
debian/: changelog  control  python3-truenas-api-client.manpages  rules
examples/: README.md  create_smb_time_machine_share.py  two_factor_challenge_response_auth.py
tests/: run_scram_tests.py  test_auth_api_key.py
tests/daemon/: __init__.py  test_client.py  test_constants.py  test_utils.py
tests/scram/: __init__.py  test_compatibility.py  test_py_scram.py  test_scram_client.py
truenas_api_client/: __init__.py  auth_api_key.py  config.py  ejson.py  exc.py  jsonrpc.py  legacy.py  scram_impl.py  utils.py
truenas_api_client/daemon/: README.md  __init__.py  cli.py  client.py  constants.py  log_config.py  server.py  utils.py
truenas_api_client/py_scram/: README.md  __init__.py  client_final.py  client_first.py  common.py  error.py  scram_crypto.py  server_final.py  server_first.py  verify.py
